lesson05/grammar.txt
program = block

block = stmt block | stmt

stmt = if | while | assignment | return

if = 'if' paren_expr '{' block '}'
while = 'while' paren_expr '{' block '}'

assignment = id '=' expr ';'

return = 'return' expr ';'

expr = eq | lt | gt | lte | gte | arith

eq = arith '==' expr
lt = arith '<' expr
gt = arith '>' expr
lte = arith '<=' expr
gte = arith '>=' expr

arith = sum | sub | term

sum = term '+' arith
sub = term '-' arith

term = mul | div | atom

mul = atom '*' term
div = atom '/' term

atom = paren_expr | number | id

paren_expr = '(' expr ')'

### id и number парсим просто циклом
number = -?[0-9]+
id = [A-Za-z_][A-Za-z_0-9]*
